// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App component Render App with default value from store 1`] = `
<div data-server-rendered="true">
    <section class="hero is-primary">
        <nav class="nav">
            <div class="nav-left">
                <!---->
            </div>
            <div class="nav-center">

            </div>
            <div class="nav-right">
                <!---->
            </div>
        </nav>
    </section>
    <!---->
</div>
`;

exports[`App component Render App with value from store 1`] = `
<div data-server-rendered="true">
    <section class="hero is-primary">
        <nav class="nav">
            <div class="nav-left">
                <!---->
            </div>
            <div class="nav-center">

            </div>
            <div class="nav-right">
                <!---->
            </div>
        </nav>
    </section>
    <!---->
</div>
`;

exports[`App component Render App with value from store 2`] = `
<div data-server-rendered="true">
    <section class="hero is-primary">
        <nav class="nav">
            <div class="nav-left">
                <!---->
            </div>
            <div class="nav-center">
                Test
            </div>
            <div class="nav-right">
                <!---->
            </div>
        </nav>
    </section>
    <!---->
</div>
`;
